--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <head>
+<head>
   <meta charset="UTF-8" />
   <title>二手交易平台</title>
+
+  <!-- Firebase SDK（compat 版，適合純 HTML） -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
   <style>
-    body { font-family: Arial; background:#f5f5f5; padding:20px; }
-    h1 { text-align:center; }
-    .container { display:flex; gap:20px; }
-    .box { background:#fff; padding:15px; border-radius:8px; width:50%; }
-    img { width:100%; max-height:200px; object-fit:cover; }
-    button { margin-top:10px; padding:8px 12px; cursor:pointer; }
-    select, input { width:100%; margin-top:8px; padding:6px; }
-    .item { border-bottom:1px solid #ddd; margin-bottom:10px; padding-bottom:10px; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+    }
+    .container {
+      display: flex;
+      gap: 20px;
+    }
+    .box {
+      background: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      width: 50%;
+    }
+    input, select, button {
+      width: 100%;
+      margin-top: 8px;
+      padding: 6px;
+      font-size: 14px;
+    }
+    button {
+      cursor: pointer;
+    }
+    img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      margin-bottom: 6px;
+    }
+    .item {
+      border-bottom: 1px solid #ddd;
+      margin-bottom: 12px;
+      padding-bottom: 12px;
+    }
   </style>
 </head>
+
 <body>
 
 <h1>🛒 二手交易網站</h1>
@@ -26,9 +59,13 @@
   <!-- 上架商品 -->
   <div class="box">
     <h3>上架商品</h3>
+
     <input type="text" id="name" placeholder="商品名稱">
     <input type="number" id="price" placeholder="價格">
+    <input type="text" id="seller" placeholder="賣家名字">
+    <input type="text" id="contact" placeholder="聯繫方式（Line / Email）">
     <input type="file" id="photo">
+
     <select id="place">
       <option>國壽仁愛大樓</option>
       <option>國壽信義安和大樓</option>
@@ -36,6 +73,7 @@
       <option>銀行松仁大樓</option>
       <option>證券敦南大樓</option>
     </select>
+
     <button onclick="addItem()">上架</button>
   </div>
 
@@ -48,26 +86,27 @@
 </div>
 
 <script>
-   apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
+  /* 🔥 Firebase 設定（已幫你整理好） */
+  const firebaseConfig = {
+    apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
     authDomain: "sale-chiikawa.firebaseapp.com",
     projectId: "sale-chiikawa",
-    storageBucket: "sale-chiikawa.firebasestorage.app",
+    storageBucket: "sale-chiikawa.appspot.com",
     messagingSenderId: "22981104406",
     appId: "1:22981104406:web:7c094b64fc1877c6d1f637"
   };
 
-  // 初始化 Firebase
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
   const itemsBox = document.getElementById("items");
 
-  // 新增商品
+  /* 新增商品 */
   function addItem() {
-    const name = document.getElementById("name").value;
+    const name = document.getElementById("name").value.trim();
     const price = document.getElementById("price").value;
-    const seller = document.getElementById("seller").value;
-    const contact = document.getElementById("contact").value;
+    const seller = document.getElementById("seller").value.trim();
+    const contact = document.getElementById("contact").value.trim();
     const place = document.getElementById("place").value;
     const photoInput = document.getElementById("photo");
 
@@ -87,35 +126,38 @@
         img: reader.result,
         createdAt: new Date()
       }).then(() => {
-        alert("商品已上架！");
-        renderItems();
+        // 清空表單
+        document.getElementById("name").value = "";
+        document.getElementById("price").value = "";
+        document.getElementById("seller").value = "";
+        document.getElementById("contact").value = "";
+        document.getElementById("photo").value = "";
       });
     };
     reader.readAsDataURL(photoInput.files[0]);
   }
 
-  // 顯示所有商品（所有人共用）
- function renderItems() {
-  db.collection("items")
-    .orderBy("createdAt", "desc")
-    .onSnapshot(snapshot => {
-      itemsBox.innerHTML = "";
-      snapshot.forEach(doc => {
-        const i = doc.data();
-        itemsBox.innerHTML += `
-          <div class="item">
-            <img src="${i.img}">
-            <b>${i.name}</b><br>
-            價格：$${i.price}<br>
-            賣家：${i.seller}<br>
-            聯繫方式：${i.contact}<br>
-            交易地點：${i.place}<br>
-          </div>
-        `;
+  /* 即時顯示所有商品（多人同步） */
+  function renderItems() {
+    db.collection("items")
+      .orderBy("createdAt", "desc")
+      .onSnapshot(snapshot => {
+        itemsBox.innerHTML = "";
+        snapshot.forEach(doc => {
+          const i = doc.data();
+          itemsBox.innerHTML += `
+            <div class="item">
+              <img src="${i.img}">
+              <b>${i.name}</b><br>
+              價格：$${i.price}<br>
+              賣家：${i.seller}<br>
+              聯繫方式：${i.contact}<br>
+              交易地點：${i.place}<br>
+            </div>
+          `;
+        });
       });
-    });
-}
-
+  }
 
   renderItems();
 </script>
