--- a/index.html
+++ b/index.html
@@ -87,17 +87,18 @@
 
 <script>
   /* 🔥 Firebase 設定（已幫你整理好） */
-  const firebaseConfig = {
+const firebaseConfig = {
     apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
     authDomain: "sale-chiikawa.firebaseapp.com",
     projectId: "sale-chiikawa",
-    storageBucket: "sale-chiikawa.appspot.com",
+    storageBucket: "sale-chiikawa.firebasestorage.app",
     messagingSenderId: "22981104406",
     appId: "1:22981104406:web:7c094b64fc1877c6d1f637"
   };
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 
   const itemsBox = document.getElementById("items");
 
