--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<script>
-  alert("🔥 Firebase 初始化成功！");
-</script>
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+  <meta charset="UTF-8">
+  <title>JS 驗證</title>
+</head>
+
+<body>
+  <h1>JavaScript 驗證頁</h1>
+
+  <script>
+    alert("🔥 JavaScript 現在一定會執行！");
+  </script>
+</body>
+</html>
