--- a/index.html
+++ b/index.html
@@ -1,15 +1,172 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8">
-  <title>JS 驗證</title>
+  <meta charset="UTF-8" />
+  <title>二手交易平台</title>
+
+  <!-- Firebase SDK（只用這一組，不要再加 module） -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+    }
+    .container {
+      display: flex;
+      gap: 20px;
+    }
+    .box {
+      background: #fff;
+      padding: 15px;
+      border-radius: 8px;
+      width: 50%;
+    }
+    input, select, button {
+      width: 100%;
+      margin-top: 8px;
+      padding: 6px;
+      font-size: 14px;
+    }
+    button {
+      cursor: pointer;
+    }
+    img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      margin-bottom: 6px;
+    }
+    .item {
+      border-bottom: 1px solid #ddd;
+      margin-bottom: 12px;
+      padding-bottom: 12px;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>JavaScript 驗證頁</h1>
 
-  <script>
-    alert("🔥 JavaScript 現在一定會執行！");
-  </script>
+<h1>🛒 二手交易網站</h1>
+
+<div class="container">
+
+  <!-- 上架商品 -->
+  <div class="box">
+    <h3>上架商品</h3>
+
+    <input type="text" id="name" placeholder="商品名稱">
+    <input type="number" id="price" placeholder="價格">
+    <input type="text" id="seller" placeholder="賣家名字">
+    <input type="text" id="contact" placeholder="聯繫方式（Line / Email）">
+    <input type="file" id="photo">
+
+    <select id="place">
+      <option>國壽仁愛大樓</option>
+      <option>國壽信義安和大樓</option>
+      <option>國壽內湖大樓</option>
+      <option>銀行松仁大樓</option>
+      <option>證券敦南大樓</option>
+    </select>
+
+    <button onclick="addItem()">上架</button>
+  </div>
+
+  <!-- 商品列表 -->
+  <div class="box">
+    <h3>商品列表</h3>
+    <div id="items"></div>
+  </div>
+
+</div>
+
+<!-- ✅ 所有 JS 一定放在 body 最後 -->
+<script>
+  /* Firebase 初始化 */
+  const firebaseConfig = {
+    apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
+    authDomain: "sale-chiikawa.firebaseapp.com",
+    projectId: "sale-chiikawa",
+    storageBucket: "sale-chiikawa.appspot.com",
+    messagingSenderId: "22981104406",
+    appId: "1:22981104406:web:7c094b64fc1877c6d1f637"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  const itemsBox = document.getElementById("items");
+
+  /* 新增商品 */
+  function addItem() {
+    const name = document.getElementById("name").value.trim();
+    const price = document.getElementById("price").value;
+    const seller = document.getElementById("seller").value.trim();
+    const contact = document.getElementById("contact").value.trim();
+    const place = document.getElementById("place").value;
+    const photoInput = document.getElementById("photo");
+
+    if (!name || !price || !seller || !contact || !photoInput.files[0]) {
+      alert("請填寫所有欄位");
+      return;
+    }
+
+    const reader = new FileReader();
+    reader.onload = function () {
+      db.collection("items")
+        .add({
+          name,
+          price,
+          seller,
+          contact,
+          place,
+          img: reader.result,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        })
+        .then(() => {
+          alert("✅ 商品已上架");
+
+          // 清空表單
+          document.getElementById("name").value = "";
+          document.getElementById("price").value = "";
+          document.getElementById("seller").value = "";
+          document.getElementById("contact").value = "";
+          document.getElementById("photo").value = "";
+        })
+        .catch(err => {
+          alert("❌ Firestore 錯誤：" + err.message);
+          console.error(err);
+        });
+    };
+
+    reader.readAsDataURL(photoInput.files[0]);
+  }
+
+  /* 即時同步商品列表 */
+  db.collection("items")
+    .orderBy("createdAt", "desc")
+    .onSnapshot(snapshot => {
+      itemsBox.innerHTML = "";
+      snapshot.forEach(doc => {
+        const i = doc.data();
+        itemsBox.innerHTML += `
+          <div class="item">
+            <img src="${i.img}">
+            <b>${i.name}</b><br>
+            價格：$${i.price}<br>
+            賣家：${i.seller}<br>
+            聯繫方式：${i.contact}<br>
+            交易地點：${i.place}<br>
+          </div>
+        `;
+      });
+    });
+</script>
+
 </body>
 </html>
