--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>二手交易平台</title>
 
-  <!-- Firebase SDK（CDN + compat） -->
+  <!-- Firebase SDK（compat 版，適合 GitHub Pages） -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
@@ -20,12 +20,14 @@
     .container {
       display: flex;
       gap: 20px;
+      flex-wrap: wrap;
     }
     .box {
       background: #fff;
       padding: 15px;
       border-radius: 8px;
-      width: 50%;
+      width: 48%;
+      min-width: 300px;
     }
     input, select, button {
       width: 100%;
@@ -48,17 +50,39 @@
       display: block;
       margin-top: 4px;
     }
-    img {
-      width: 100%;
-      max-height: 200px;
-      object-fit: cover;
-      margin-bottom: 6px;
-      border-radius: 4px;
-    }
+
     .item {
       border-bottom: 1px solid #ddd;
-      margin-bottom: 12px;
-      padding-bottom: 12px;
+      margin-bottom: 14px;
+      padding-bottom: 14px;
+    }
+
+    /* 商品圖片（列表） */
+    .image-preview {
+      width: 100%;
+      max-height: 200px;
+      object-fit: contain;
+      background: #f0f0f0;
+      cursor: pointer;
+      border-radius: 4px;
+      margin-bottom: 6px;
+    }
+
+    /* Lightbox */
+    #lightbox {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.8);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+    }
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      background: #fff;
+      border-radius: 6px;
     }
   </style>
 </head>
@@ -79,7 +103,7 @@
     <input type="text" id="contact" placeholder="聯繫方式（Line / Email）">
 
     <input type="file" id="photo" accept="image/*">
-    <small>📌 圖片需小於 <b>700KB</b>（避免無法上架）</small>
+    <small>📌 圖片需小於 <b>700KB</b></small>
 
     <select id="place">
       <option>國壽仁愛大樓</option>
@@ -100,108 +124,124 @@
 
 </div>
 
-<!-- 所有 JS 一定放在 body 最後 -->
+<!-- 放大圖片用 -->
+<div id="lightbox" onclick="closeLightbox()">
+  <img id="lightboxImg">
+</div>
+
 <script>
-  /* ===== Firebase 初始化 ===== */
-  const firebaseConfig = {
-    apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
-    authDomain: "sale-chiikawa.firebaseapp.com",
-    projectId: "sale-chiikawa",
-    storageBucket: "sale-chiikawa.appspot.com",
-    messagingSenderId: "22981104406",
-    appId: "1:22981104406:web:7c094b64fc1877c6d1f637"
-  };
+/* ===== Firebase 初始化 ===== */
+const firebaseConfig = {
+  apiKey: "AIzaSyC-uOHBAqCsdZkvqisND_0JgR5govDqMZY",
+  authDomain: "sale-chiikawa.firebaseapp.com",
+  projectId: "sale-chiikawa",
+  storageBucket: "sale-chiikawa.appspot.com",
+  messagingSenderId: "22981104406",
+  appId: "1:22981104406:web:7c094b64fc1877c6d1f637"
+};
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const itemsBox = document.getElementById("items");
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+const itemsBox = document.getElementById("items");
 
-  /* ===== 新增商品（含圖片大小限制） ===== */
-  function addItem() {
-    const name = document.getElementById("name").value.trim();
-    const price = document.getElementById("price").value;
-    const seller = document.getElementById("seller").value.trim();
-    const contact = document.getElementById("contact").value.trim();
-    const place = document.getElementById("place").value;
-    const photoInput = document.getElementById("photo");
+/* ===== 產生 / 取得 ownerId（無登入） ===== */
+let myOwnerId = localStorage.getItem("ownerId");
+if (!myOwnerId) {
+  myOwnerId = "owner_" + Math.random().toString(36).slice(2);
+  localStorage.setItem("ownerId", myOwnerId);
+}
 
-    if (!name || !price || !seller || !contact || !photoInput.files[0]) {
-      alert("請填寫所有欄位");
-      return;
-    }
+/* ===== 圖片放大 ===== */
+function openLightbox(src) {
+  document.getElementById("lightboxImg").src = src;
+  document.getElementById("lightbox").style.display = "flex";
+}
+function closeLightbox() {
+  document.getElementById("lightbox").style.display = "none";
+}
 
-    const file = photoInput.files[0];
+/* ===== 上架商品 ===== */
+function addItem() {
+  const name = document.getElementById("name").value.trim();
+  const price = Number(document.getElementById("price").value);
+  const seller = document.getElementById("seller").value.trim();
+  const contact = document.getElementById("contact").value.trim();
+  const place = document.getElementById("place").value;
+  const photoInput = document.getElementById("photo");
 
-    /* 🔒 檔案大小限制（700KB） */
-    const MAX_SIZE = 700 * 1024;
-    if (file.size > MAX_SIZE) {
-      alert(
-        "❌ 圖片太大，無法上架\n\n" +
-        "請選擇小於 700KB 的圖片\n" +
-        "目前大小：" + Math.round(file.size / 1024) + " KB"
-      );
-      photoInput.value = "";
-      return;
-    }
-
-    const reader = new FileReader();
-    reader.onload = function () {
-      const base64 = reader.result;
-
-      /* 🔐 Base64 再次保險（避免 Firestore 1MB 限制） */
-      const estimatedBytes = Math.ceil(base64.length * 0.75);
-      if (estimatedBytes > 1024 * 1024) {
-        alert("❌ 圖片轉換後仍超過 1MB，請使用更小圖片");
-        return;
-      }
-
-      db.collection("items")
-        .add({
-          name,
-          price,
-          seller,
-          contact,
-          place,
-          img: base64,
-          createdAt: firebase.firestore.FieldValue.serverTimestamp()
-        })
-        .then(() => {
-          alert("✅ 商品已成功上架");
-
-          document.getElementById("name").value = "";
-          document.getElementById("price").value = "";
-          document.getElementById("seller").value = "";
-          document.getElementById("contact").value = "";
-          document.getElementById("photo").value = "";
-        })
-        .catch(err => {
-          alert("❌ Firestore 錯誤：" + err.message);
-          console.error(err);
-        });
-    };
-
-    reader.readAsDataURL(file);
+  if (!name || !price || !seller || !contact || !photoInput.files[0]) {
+    alert("請填寫所有欄位");
+    return;
   }
 
-  /* ===== 即時同步顯示商品 ===== */
-  db.collection("items")
-    .orderBy("createdAt", "desc")
-    .onSnapshot(snapshot => {
-      itemsBox.innerHTML = "";
-      snapshot.forEach(doc => {
-        const i = doc.data();
-        itemsBox.innerHTML += `
-          <div class="item">
-            <img src="${i.img}">
-            <b>${i.name}</b><br>
-            價格：$${i.price}<br>
-            賣家：${i.seller}<br>
-            聯繫方式：${i.contact}<br>
-            交易地點：${i.place}<br>
-          </div>
-        `;
-      });
+  const file = photoInput.files[0];
+  const MAX_SIZE = 700 * 1024;
+  if (file.size > MAX_SIZE) {
+    alert("圖片太大，請選擇小於 700KB 的圖片");
+    photoInput.value = "";
+    return;
+  }
+
+  const reader = new FileReader();
+  reader.onload = function () {
+    const base64 = reader.result;
+    const estimatedBytes = Math.ceil(base64.length * 0.75);
+    if (estimatedBytes > 1024 * 1024) {
+      alert("圖片轉換後超過 1MB，請使用更小圖片");
+      return;
+    }
+
+    db.collection("items").add({
+      name,
+      price,
+      seller,
+      contact,
+      place,
+      img: base64,
+      ownerId: myOwnerId,
+      createdAt: firebase.firestore.FieldValue.serverTimestamp()
+    }).then(() => {
+      alert("✅ 商品已上架");
+      document.getElementById("name").value = "";
+      document.getElementById("price").value = "";
+      document.getElementById("seller").value = "";
+      document.getElementById("contact").value = "";
+      document.getElementById("photo").value = "";
     });
+  };
+
+  reader.readAsDataURL(file);
+}
+
+/* ===== 下架商品 ===== */
+function removeItem(id) {
+  if (!confirm("確定要下架這個商品嗎？")) return;
+  db.collection("items").doc(id).delete();
+}
+
+/* ===== 即時顯示商品 ===== */
+db.collection("items")
+  .orderBy("createdAt", "desc")
+  .onSnapshot(snapshot => {
+    itemsBox.innerHTML = "";
+    snapshot.forEach(doc => {
+      const i = doc.data();
+      const isMine = i.ownerId === myOwnerId;
+
+      itemsBox.innerHTML += `
+        <div class="item">
+          <img src="${i.img}" class="image-preview"
+               onclick="openLightbox('${i.img}')">
+          <b>${i.name}</b><br>
+          價格：$${i.price}<br>
+          賣家：${i.seller}<br>
+          聯繫方式：${i.contact}<br>
+          交易地點：${i.place}<br>
+          ${isMine ? `<button onclick="removeItem('${doc.id}')">下架商品</button>` : ""}
+        </div>
+      `;
+    });
+  });
 </script>
 
 </body>
