--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
     <input type="text" id="name" placeholder="商品名稱">
     <input type="number" id="price" placeholder="價格">
-    <input type="text" id="seller" placeholder="賣家名字">
-    <input type="text" id="contact" placeholder="聯繫方式（Line / Email）">
+    <input type="text" id="seller" placeholder="賣家名字（請跟CT一樣）">
+    <input type="text" id="contact" placeholder="聯繫方式（公司電話及分機 / Email / 其他你可以聯繫的方式）">
 
     <input type="file" id="photo" accept="image/*">
     <small>📌 圖片需小於 <b>700KB</b></small>
@@ -111,6 +111,7 @@
       <option>國壽內湖大樓</option>
       <option>銀行松仁大樓</option>
       <option>證券敦南大樓</option>
+      <option>可另約地點</option>
     </select>
 
     <button onclick="addItem()">上架</button>
