更新後台測試

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ nav button.active {
     </select>
 
     <input id="seller" placeholder="賣家">
-    <input id="contact" placeholder="聯繫方式">
+    <input id="contact" placeholder="聯繫方式(CT、公司分機或其他可聯繫管道）">
 
     <input id="photo" type="file" accept="image/*" multiple>
     <small>最多 3 張，每張需小於 700KB</small>
